--- a/css/style.css
+++ b/css/style.css
@@ -65,4 +65,6 @@ footer {
     text-align: center;
     padding-bottom: 10px;
     padding-right: 10px;
+    padding-left: 0px;
+    padding-top: 0px;
 }
