--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,8 @@ div {
     text-align: left;
 }
 
-footer {
+footer p {
     text-align: center;
     padding-bottom: 10px;
     padding-right: 10px;
-    padding-left: 0px;
-    padding-top: 0px;
 }
